html et css final de la page à la francaise (version statique)

--- a/a_la_française.html
+++ b/a_la_française.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <header class="header">
-            <i class="fas fa-arrow-left header_icone"></i>
+            <a href="index.html" class="lien"><i class="fas fa-arrow-left header_icone"></i></a>
             <h1 class="header_logo">ohmyfood</h1>
         </header>
         <main class="main">
@@ -25,104 +25,111 @@
                 </div>
             </div>
             <section class="list">
-                <h3 class="list_type_de_plats">Entrées</h3>
-                <div class="plat_et_tarif">
-                    <div class="plat">
-                        <span class="nom_du_plat">Tartare de poulpe acidulé</span>
-                        <span class="description">Aux zests d'orange</span>
+                <h3 class="list_type_du_plat">Entrées</h3>
+                <div class="list_ls">
+                    <div class="list_plat_et_tarif">
+                        <div class="list_plat">
+                            <span class="list_nom_du_plat">Tartare de poulpe acidulé</span> <br>
+                            <span class="list_description">Aux zests d'orange</span>                        </div>
+                        <div class="list_prix_et_check">
+                            <div class="list_prix"> 25€</div>
+                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                        </div>
                     </div>
-                    <div class="prix_et_check">
-                        <span class="prix"> 25€</span>
-                        <span class="check"><i class="fas fa-check-circle"></i></span>
+                    <div class="list_plat_et_tarif">
+                        <div class="list_plat">
+                            <span class="list_nom_du_plat">Velouté de légumes d'antan</span> <br>
+                            <span class="list_description">Carotte, panais, topinambour</span>
+                        </div>
+                        <div class="list_prix_et_check">
+                            <div class="list_prix"> 35€</div>
+                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                        </div>                        
                     </div>
-                </div>
-                <div class="plat_et_tarif">
-                    <div class="plat">
-                        <span class="nom_du_plat">Velouté de légumes d'antan</span>
-                        <span class="description"> Carotte, panais, topinambour</span>
-                    </div>
-                    <div class="prix_et_check">
-                        <span class="prix">35€</span>
-                        <span class="check"><i class="fas fa-check-circle"></i></span>
-                    </div>
-                </div>
-                <div class="plat_et_tarif">
-                    <div class="plat">
-                        <span class="nom_du_plat">Soupe à l'oignon</span>
-                        <span class="nom_du_plat">Revisitée</span>
-                    </div>
-                    <div class="prix_et_check">
-                        <span class="prix">20€</span>
-                        <span class="check"><i class="fas fa-check-circle"></i></span>
-                    </div>
-                </div>
-            </section>
-            <section class="list_des_plats">
-                <h3 class="type_du_plat"> Plats</h3>
-                <div class="plat_et_tarif">
-                    <div class="plat">
-                        <span class="nom_du_plat">Coquilles Saint-Jacques</span>
-                        <span class="description">Accompagnées d'une purée de panais</span>
-                    </div>
-                    <div class="prix_et_check">
-                        <span class="prix"> 40€</span>
-                        <span class="check"><i class="fas fa-check-circle"></i></span>
-                    </div>
-                </div>
-                <div class="plat_et_tarif">
-                    <div class="plat">
-                        <span class="nom_du_plat">Magret de canard</span>
-                        <span class="description"> Et parmentier de pomme de terres</span>
-                    </div>
-                    <div class="prix_et_check">
-                        <span class="prix">35€</span>
-                        <span class="check"><i class="fas fa-check-circle"></i></span>
-                    </div>
-                </div>
-                <div class="plat_et_tarif">
-                    <div class="plat">
-                        <span class="nom_du_plat">Pigeonneau d'Ille-et-Vilaine </span>
-                        <span class="description">Sur son lit de gnocchis aux légumes</span>
-                    </div>
-                    <div class="prix_et_check">
-                        <span class="prix">44€</span>
-                        <span class="check"><i class="fas fa-check-circle"></i></span>
+                    <div class="list_plat_et_tarif">
+                        <div class="list_plat">
+                            <span class="list_nom_du_plat">Soupe à l'oignon</span> <br>
+                            <span class="list_description">Revisitée</span>       
+                        </div>
+                        <div class="list_prix_et_check">
+                            <div class="list_prix"> 20€</div>
+                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                        </div>
                     </div>
                 </div>
             </section>
-            <section class="list_des_plats">
-                <h3 class="type_du_plat">Desserts</h3>
-                <div class="plat_et_tarif">
-                    <div class="plat">
-                        <span class="nom_du_plat">Pétales de violettes glacés</span>
-                        <span class="description">Et purée de noisettes</span>
+            <section class="list">
+                <h3 class="list_type_du_plat"> Plats</h3>
+                <div class="list_ls">
+                    <div class="list_plat_et_tarif">
+                        <div class="list_plat">
+                            <span class="list_nom_du_plat">Coquilles Saint-Jacques</span> <br>
+                            <span class="list_description">Accompagnées d'une purée de panais</span>
+                        </div>
+                        <div class="list_prix_et_check">
+                            <div class="list_prix"> 40€</div>
+                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                        </div>
                     </div>
-                    <div class="prix_et_check">
-                        <span class="prix">18€</span>
-                        <span class="check"><i class="fas fa-check-circle"></i></span>
+                    <div class="list_plat_et_tarif">
+                        <div class="list_plat">
+                            <span class="list_nom_du_plat">Magret de canard</span> <br>
+                            <span class="list_description"> Et parmentier de pommes de terres</span>
+                        </div>
+                        <div class="list_prix_et_check">
+                            <div class="list_prix">35€</div>
+                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                        </div>
+                    </div>
+                    <div class="list_plat_et_tarif">
+                        <div class="list_plat">
+                            <span class="list_nom_du_plat">Pigeonneau d'Ille-et-Vilaine </span> <br>
+                            <span class="list_description">Sur son lit de gnocchis aux légumes</span>
+                        </div>
+                        <div class="list_prix_et_check">
+                            <div class="list_prix">44€</div>
+                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                        </div>
                     </div>
                 </div>
-                <div class="plat_et_tarif">
-                    <div class="plat">
-                        <span class="nom_du_plat">Fondant au chocolat</span>
-                        <span class="description">Revisité</span>
+            </section>
+            <section class="list">
+                <h3 class="list_type_du_plat">Desserts</h3>
+                <div class="list_ls">
+                    <div class="list_plat_et_tarif">
+                        <div class="list_plat">
+                            <span class="list_nom_du_plat">Pétales de violettes glacés</span> <br>
+                            <span class="list_description">Et purée de noisettes</span>
+                        </div>
+                        <div class="list_prix_et_check">
+                            <div class="list_prix">18€</div>
+                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                        </div>
                     </div>
-                    <div class="prix_et_check">
-                        <span class="prix">22€</span>
-                        <span class="check"><i class="fas fa-check-circle"></i></span>
+                    <div class="list_plat_et_tarif">
+                        <div class="list_plat">
+                            <span class="list_nom_du_plat">Fondant au chocolat</span> <br>
+                            <span class="list_description">Revisité</span>
+                        </div>
+                        <div class="list_prix_et_check">
+                            <div class="list_prix">22€</div>
+                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                        </div>
+                    </div>
+                    <div class="list_plat_et_tarif">
+                        <div class="list_plat">
+                            <span class="list_nom_du_plat">Millefeuille croustillant</span> <br>
+                            <span class="list_description">Myrtilles et pâte d'amande</span>
+                        </div>
+                        <div class="list_prix_et_check">
+                            <div class="list_prix">23€</div>
+                            <div class="list_check"><i class="fas fa-check-circle"></i></div>
+                        </div>
                     </div>
                 </div>
-                <div class="plat_et_tarif">
-                    <div class="plat">
-                        <span class="nom_du_plat">Millefeuille croustillant</span>
-                        <span class="description">Myrtilles et pâte d'amande</span>
-                    </div>
-                    <div class="prix_et_check">
-                        <span class="prix">23€</span>
-                        <span class="check"><i class="fas fa-check-circle"></i></span>
-                    </div>
-                </div>
-                <span class="bouton">Commander</span>
+            </section>
+            <section class="commander">
+            <div class="bouton">Commander</div>
             </section>
         </main>
         <footer class="footer">
